dev merged and some refactor added